--- a/css/index.css
+++ b/css/index.css
@@ -94,6 +94,7 @@ nav ul li img {
 .navLogoImage {
     width: 5rem;
 }
+/* ---------------------------------*/
 
 /* --------------- Main Content Styles --------------- */
 
