Sea life w3c errors correction and commented

--- a/css/Animals_and_Quiz/EarthLife.css
+++ b/css/Animals_and_Quiz/EarthLife.css
@@ -555,7 +555,7 @@ button {
         justify-content: space-between;
         width: 100%;
         padding: 0;
-        background-color: rgb(133, 185, 198);
+        background-color: #8BC34A;
     }
 
     nav ul li {
