--- a/css/Animals_and_Quiz/SeaAnimals.css
+++ b/css/Animals_and_Quiz/SeaAnimals.css
@@ -275,3 +275,37 @@ footer a {
 #backToTopButton:hover {
     background-color: #818181;
 }
+
+/* Responsive styles */
+@media (max-width: 768px) {
+
+    body {
+        padding-top: 60px;
+    }
+
+    nav ul {
+        display: flex;
+        flex-direction: row;
+        flex-wrap: nowrap;
+        justify-content: space-between;
+        width: 100%;
+        padding: 0;
+        background-color: rgb(133, 185, 198);
+    }
+
+    nav ul li {
+        flex: 1;
+        text-align: center;
+        box-sizing: border-box;
+    }
+
+    nav ul li a {
+        display: block;
+        width: 100%;
+        height: 100%;
+    }
+
+    .navLogoImage {
+        width: 4rem;
+    }
+}
