--- a/css/Animals_and_Quiz/SeaLife.css
+++ b/css/Animals_and_Quiz/SeaLife.css
@@ -34,18 +34,6 @@ nav ul li {
     transition: background-color 0.3s ease;
 }
 
-/* Hover effect on the entire li block */
-nav ul li:hover {
-    background-color: #8BC34A;
-}
-
-/* Navigation text */
-.NavText {
-    text-decoration: none;
-    color: #ffffff;
-    font-weight: bold;
-    display: block;
-}
 
 /* Logo image */
 nav ul li img {
@@ -57,11 +45,17 @@ nav ul li img {
 .NavText {
     text-decoration: none;
     color: #ffffff;
-    padding: 1rem;
+    padding: 1.6rem;
     font-family: poppins, sans-serif;
     font-weight: bold;
     font-size: medium;
     font-size: 1.5rem;
+    display: block;
+}
+
+/* Navigation block hover effect */
+nav ul li:hover {
+    background-color: #8BC34A;
 }
 
 /* Align the first list item to the left */
@@ -84,21 +78,18 @@ nav ul li img {
     width: 5rem;
 }
 
-/* ---------------------------------*/
-
 /* Responsive adjustments to devices */
 @media (max-width: 768px) {
     nav ul {
         flex-direction: column;
         align-items: flex-start;
-        background-color: rgb(133, 185, 198);
         padding: 1rem;
     }
 
     nav ul li {
         width: 100%;
         text-align: left;
-        padding: 0.75rem 1rem;
+        padding: 0.75rem;
     }
 
     .navLogoImage {
@@ -144,7 +135,7 @@ fieldset.quiz {
     box-sizing: border-box;
 }
 
-h1 {
+h1,h2 {
     text-align: center;
     color: #002F3D;
     font-family: poppins, sans-serif;
