--- a/css/Animals_and_Quiz/SeaAnimals.css
+++ b/css/Animals_and_Quiz/SeaAnimals.css
@@ -29,63 +29,72 @@ nav ul {
 
 /* Each list item */
 nav ul li {
-    padding: 1rem 1.5rem;
+    padding: 0.5rem;
     font-size: 20px;
     transition: background-color 0.3s ease;
 }
 
-/* Hover effect on the entire li block */
-nav ul li:hover {
-    background-color: #8BC34A;
+
+/* Logo image */
+nav ul li img {
+    float: left;
+    margin-left: 0.5rem;
 }
 
 /* Navigation text */
 .NavText {
     text-decoration: none;
     color: #ffffff;
-    font-weight: bold;
-    display: block;
-}
-
-/* Logo image */
-nav ul li img {
-    float: left;
-    padding: 0.5rem;
-    margin-left: 0.5rem;
-}
-
-/* Logo container */
-.navLogoImage {
-    width: 4.3rem;
-}
-
-.NavText {
-    text-decoration: none;
-    color: #ffffff;
-    padding: 1rem;
+    padding: 1.6rem;
     font-family: poppins, sans-serif;
     font-weight: bold;
     font-size: medium;
+    font-size: 1.5rem;
+    display: block;
 }
 
+/* Navigation block hover effect */
+nav ul li:hover {
+    background-color: #8BC34A;
+}
+
+/* Align the first list item to the left */
 nav ul li:not(:first-child) {
     float: right;
 }
 
 nav ul li img {
     float: left;
-    padding: 0.5rem;
     margin-left: 0.5rem;
 }
 
-
+/* Align the first list item to the left */
 .navList {
     float: left;
 }
 
-
+/* Logo image */
 .navLogoImage {
     width: 5rem;
+}
+
+/* Responsive adjustments to devices */
+@media (max-width: 768px) {
+    nav ul {
+        flex-direction: column;
+        align-items: flex-start;
+        padding: 1rem;
+    }
+
+    nav ul li {
+        width: 100%;
+        text-align: left;
+        padding: 0.75rem;
+    }
+
+    .navLogoImage {
+        width: 4rem;
+    }
 }
 
 /* -------- CSS for the main content -------- */
@@ -120,7 +129,7 @@ h2 {
 }
 
 
-/* -------- CSS for the footer -------- */
+/* -------- footer -------- */
 
 footer {
     background-color: rgb(68, 67, 67);
@@ -167,8 +176,6 @@ footer a {
     width: 4rem;
     height: auto;
 }
-
-/*---------------------------------------------*/
 
 /* CSS for the video and audio sections */
 
